-
Bug
-
Resolution: Fixed
-
P2: Important
-
6.8.1
-
None
-
Windows 11 23H2 (22631.4541)
Chrome 131.0.6778.109
emsdk 3.1.56
cmake 3.29.2
ninja 1.12.1
-
-
7dd94d74e (dev), 43eb0dbd3 (6.9), b6faeb814 (6.8)
In this gif you can see the complete browser window with the app running.
The purple frame is the app window, its moves outside the visible area on inputing text.

In my actual application I managed to move the window without writing more than fits into the textfield, but I was not able to reproduce that.
Following example reproduces the problem:
import QtQuick import QtQuick.Controls Window { visible: true height: 600 width: 800 Rectangle{ anchors.fill: parent border.width: 5 border.color: "magenta" Row{ anchors.top: parent.top anchors.right: parent.right TextField{ placeholderText: "Field 1" } TextField{ placeholderText: "Field 2" focus: true } } TextArea{ anchors.centerIn: parent text: "**How to reproduce:**\n1. Write `Field 2` full\n2. Focus `Field 1`\n3. Focus `Field 2` write more into it" textFormat: TextArea.MarkdownText readOnly: true } } }
How to reproduce:
- Write Field 2 full
- Focus Field 1
- Focus Field 2 write more into it
- relates to
-
QTBUG-133781 Regression - Button clicks open keyboard in WebAssembly on Android
-
- Closed
-
| For Gerrit Dashboard: QTBUG-132057 | ||||||
|---|---|---|---|---|---|---|
| # | Subject | Branch | Project | Status | CR | V |
| 622090,4 | wasm: Truncate input field length to 1px, fix object selection | dev | qt/qtbase | Status: MERGED | +2 | 0 |
| 623266,2 | wasm: Truncate input field length to 1px, fix object selection | 6.9 | qt/qtbase | Status: MERGED | +2 | 0 |
| 623285,2 | wasm: Truncate input field length to 1px, fix object selection | 6.8 | qt/qtbase | Status: MERGED | +2 | 0 |